--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "16.11.54",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "axios": "1.3.3",
     "firebase": "^9.9.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
