--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@headlessui/react": "1.6.6",
     "@heroicons/react": "2.0.2",
     "@tailwindcss/forms": "0.5.2",
@@ -14,11 +16,12 @@
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "axios": "1.3.3",
-    "firebase": "^9.9.4",
+    "firebase": "9.9.4",
+    "notistack": "2.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.34.2",
-    "react-paginate": "^8.1.3",
+    "react-paginate": "8.1.3",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "4.7.4",
