--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "11.10.5",
+    "@emotion/styled": "11.10.5",
     "@headlessui/react": "1.6.6",
     "@heroicons/react": "2.0.2",
     "@tailwindcss/forms": "0.5.2",
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.0.6",
     "axios": "1.3.3",
     "firebase": "9.9.4",
+    "moment": "2.29.4",
     "notistack": "2.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
