--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.0.6",
     "axios": "1.3.3",
     "firebase": "9.9.4",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
     "moment": "2.29.4",
     "notistack": "3.0.1",
     "react": "18.2.0",
